tests/negative/Test3.sp
(* Testing function with wrong return type *)

main:Void(){
	return 0;
}